src/objects/Company__c.object
<CustomObject>
    <description>Enter the company descriptions like ( name , distribution-local and global, Territory, studio, Contact, vendor email)</description>
    <fields>
        <fullName>Company_ID__c</fullName>
        <description>Company ID Storing</description>
        <displayFormat>C-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Company ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Takes the email as Input</description>
        <inlineHelpText>Enter the email ID</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Takes the phone number as INput</description>
        <inlineHelpText>Enter the phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>